--- a/views/dtTable.ejs
+++ b/views/dtTable.ejs
@@ -2,16 +2,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+
+	<link href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.css" rel="stylesheet" type="text/css" />
+	<script src="/js/dependencies/ajax.googleapis.com-ajax-libs-jquery-1.12.4-jquery.min.js"></script>
+	<script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.js" type="text/javascript"></script>
+	<script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.ui.position.min.js" type="text/javascript"></script>
+
+
+	<script src="/js/dependencies/react.js"></script>
+	<script src="/js/dependencies/react-dom.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
+
+	<script type="text/babel" src="/js/dtTable.js"></script>
+	<script type="text/javascript" src="/js/contextmenu.js"></script>
+
 </head>
-<body>
-	
+<body>	
 <div id="center"></div>
-
 </body>
-
-<script src="/js/dependencies/ajax.googleapis.com-ajax-libs-jquery-1.12.4-jquery.min.js"></script>
-<script src="/js/dependencies/react.js"></script>
-<script src="/js/dependencies/react-dom.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
-<script type="text/babel" src="/js/dtTable.js"></script>
 </html>
