--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -92,6 +92,8 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/ajax.googleapis.com-ajax-libs-jquery-1.12.4-jquery.min.js"></script>
+    <script src="/js/dependencies/pubsub.js"></script>
+    <script src="/js/dependencies/pubsub.min.js"></script>
     <script src="/js/dependencies/react-dom-server.js"></script>
     <script src="/js/dependencies/react-dom-server.min.js"></script>
     <script src="/js/dependencies/react-dom.js"></script>
@@ -100,6 +102,7 @@
     <script src="/js/dependencies/react-with-addons.min.js"></script>
     <script src="/js/dependencies/react.js"></script>
     <script src="/js/dependencies/react.min.js"></script>
+    <script src="/js/contextmenu.js"></script>
     <script src="/js/dtTable.js"></script>
     <!--SCRIPTS END-->
   </body>
