--- a/views/dtTable.ejs
+++ b/views/dtTable.ejs
@@ -8,9 +8,9 @@
 	<script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.js" type="text/javascript"></script>
 	<script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.ui.position.min.js" type="text/javascript"></script>
 
-
 	<script src="/js/dependencies/react.js"></script>
 	<script src="/js/dependencies/react-dom.js"></script>
+	<script src="/js/dependencies/pubsub.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
 
 	<script type="text/babel" src="/js/dtTable.js"></script>
