--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -103,6 +103,7 @@
     <script src="/js/dependencies/react.js"></script>
     <script src="/js/dependencies/react.min.js"></script>
     <script src="/js/contextmenu.js"></script>
+    <script src="/js/createFile.js"></script>
     <script src="/js/dtTable.js"></script>
     <!--SCRIPTS END-->
   </body>
