--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -93,17 +93,11 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/ajax.googleapis.com-ajax-libs-jquery-1.12.4-jquery.min.js"></script>
     <script src="/js/dependencies/pubsub.js"></script>
-    <script src="/js/dependencies/pubsub.min.js"></script>
-    <script src="/js/dependencies/react-dom-server.js"></script>
-    <script src="/js/dependencies/react-dom-server.min.js"></script>
     <script src="/js/dependencies/react-dom.js"></script>
-    <script src="/js/dependencies/react-dom.min.js"></script>
-    <script src="/js/dependencies/react-with-addons.js"></script>
-    <script src="/js/dependencies/react-with-addons.min.js"></script>
     <script src="/js/dependencies/react.js"></script>
-    <script src="/js/dependencies/react.min.js"></script>
     <script src="/js/contextmenu.js"></script>
     <script src="/js/dtTable.js"></script>
+    <script src="/js/projects.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
