--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -96,6 +96,7 @@
     <script src="/js/dependencies/react-dom.js"></script>
     <script src="/js/dependencies/react.js"></script>
     <script src="/js/contextmenu.js"></script>
+    <script src="/js/dtFiles.js"></script>
     <script src="/js/dtTable.js"></script>
     <script src="/js/projects.js"></script>
     <!--SCRIPTS END-->
