--- a/views/dtTable.ejs
+++ b/views/dtTable.ejs
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <head>
 	<meta charset="utf-8">
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -20,4 +20,127 @@
 <body>	
 <div id="center"></div>
 </body>
+</html>
+ -->
+
+ <!DOCTYPE html>
+
+<html>
+
+<head>
+
+	<meta charset="utf-8">
+	
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+
+	<link rel="stylesheet" href="/js/main.css" />	
+
+	<!-- for IE --> 
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
+
+	<!-- for mozilla 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>   -->
+
+	<!-- for chrome -->
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script> 
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+	<!-- <script type="text/javascript" src="main.js"></script>  -->
+
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	
+	<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> -->
+
+	<!-- for DtTable -->
+	<link href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.css" rel="stylesheet" type="text/css" />
+	<script src="/js/dependencies/ajax.googleapis.com-ajax-libs-jquery-1.12.4-jquery.min.js"></script>
+	<script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.js" type="text/javascript"></script>
+	<script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.ui.position.min.js" type="text/javascript"></script>
+
+	<script src="/js/dependencies/react.js"></script>
+	<script src="/js/dependencies/react-dom.js"></script>
+	<script src="/js/dependencies/pubsub.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
+
+	<script type="text/babel" src="/js/dtTable.js"></script>
+	<script type="text/javascript" src="/js/contextmenu.js"></script>
+
+	<script>
+		var filesList = <%- JSON.stringify(filesList) %>;
+		var userName = <%- JSON.stringify(userName) %> ;
+		var projectId = <%- JSON.stringify(projectId) %> ;
+	</script>
+
+	<script type="text/babel" src="/js/dtFiles.js"></script>
+
+	<script type="text/javascript">
+	function fileCreate() {
+	var fileName = prompt("Please enter file name", "");
+    
+	    if (fileName != null) {
+			io.socket.post('/<%= userName %>/projects/in/<%= projectId %>/files/new', { fileName: fileName }, function (resData, jwRes) {
+				console.log("jwRes = " +  jwRes.statusCode);
+				console.log("resData = " + JSON.stringify(resData));
+	  		});       
+	    }		
+	}
+</script>
+
+</head>
+
+<body>
+
+	<div class="container">
+
+		<div class="headerDiv"> 
+		<a href = '/<%= userName %>/signout'> Signout </a>
+		</div>
+
+		<div class="contentDiv">
+			
+			<div class="left" id="leftID">
+				
+				<div class='titleMenu' id='titleMenuID'>
+					
+					<span id='minusID'>- -</span>
+
+					<span>Folder</span>
+
+					<span><div class='createButton'>
+						
+						<input type='submit' value='+' onclick='fileCreate()'/>
+
+					</div></span>
+
+				</div>
+
+				<div class='newProjectCreate' id='newProjectCreateDivID'></div>
+
+			</div>
+
+			<div class="center" id="centerID"></div>
+
+			<div class="bottomOfCenter" id="bottomOfCenterID"></div>			
+
+			<div class="right" id="rightID">
+
+				<div id="title_barID">
+
+					<div id="restoreButtonID">-</div>
+
+				</div>
+
+				<div id="boxID"></div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</body>
+
 </html>
