--- a/views/workSpace.ejs
+++ b/views/workSpace.ejs
@@ -1,29 +1,4 @@
-<!-- <html>
-<head>
-	<meta charset="utf-8">
-	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-
-	<link href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.css" rel="stylesheet" type="text/css" />
-	<script src="/js/dependencies/ajax.googleapis.com-ajax-libs-jquery-1.12.4-jquery.min.js"></script>
-	<script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.js" type="text/javascript"></script>
-	<script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.ui.position.min.js" type="text/javascript"></script>
-
-	<script src="/js/dependencies/react.js"></script>
-	<script src="/js/dependencies/react-dom.js"></script>
-	<script src="/js/dependencies/pubsub.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
-
-	<script type="text/babel" src="/js/dtTable.js"></script>
-	<script type="text/javascript" src="/js/contextmenu.js"></script>
-
-</head>
-<body>	
-<div id="center"></div>
-</body>
-</html>
- -->
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -64,16 +39,13 @@
 	<script src="/js/dependencies/react-dom.js"></script>
 	<script src="/js/dependencies/pubsub.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
-
-	<script type="text/babel" src="/js/dtTable.js"></script>
-	<script type="text/javascript" src="/js/contextmenu.js"></script>
-
 	<script>
 		var filesList = <%- JSON.stringify(filesList) %>;
 		var userName = <%- JSON.stringify(userName) %> ;
-		var projectId = <%- JSON.stringify(projectId) %> ;
+		var projectName = <%- JSON.stringify(projectName) %> ;
+	
 	</script>
-
+	
 	<script type="text/babel" src="/js/dtFiles.js"></script>
 
 	<script type="text/javascript">
@@ -81,7 +53,7 @@
 	var fileName = prompt("Please enter file name", "");
     
 	    if (fileName != null) {
-			io.socket.post('/<%= userName %>/projects/in/<%= projectId %>/files/new', { fileName: fileName }, function (resData, jwRes) {
+				io.socket.post('/<%= userName %>/projects/in/<%= projectName %>/files/new', { fileName: fileName }, function (resData, jwRes) {
 				console.log("jwRes = " +  jwRes.statusCode);
 				console.log("resData = " + JSON.stringify(resData));
 	  		});       
@@ -96,7 +68,7 @@
 	<div class="container">
 
 		<div class="headerDiv"> 
-		<a href = '/<%= userName %>/signout'> Signout </a>
+			<a href = '/<%= userName %>/signout'> Signout </a>
 		</div>
 
 		<div class="contentDiv">
@@ -121,7 +93,7 @@
 
 			</div>
 
-			<div class="center" id="centerID"></div>
+			<!-- <div class="center" id="centerID"></div> -->
 
 			<div class="bottomOfCenter" id="bottomOfCenterID"></div>			
 
